--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:label="@string/app_name"
         android:theme="@style/CustomActionBarTheme" >
         <activity
+            android:launchMode="singleTask"
             android:name=".activities.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/delete_title_bar" >
