--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,6 @@ dependencies {
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'org.apache.commons:commons-io:1.3.2'
+    compile 'com.android.support:design:22.2.0'
+    compile 'de.hdodenhof:circleimageview:2.0.0'
 }
