--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-
+apply plugin: 'newrelic'
 android {
     compileSdkVersion 21
     buildToolsVersion '22.0.1'
@@ -27,4 +27,5 @@ dependencies {
     compile 'org.apache.commons:commons-io:1.3.2'
     compile 'com.android.support:design:22.2.0'
     compile 'de.hdodenhof:circleimageview:2.0.0'
+    compile 'com.newrelic.agent.android:android-agent:5.+'
 }
