--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.SET_DEBUG_APP"></uses-permission>
+    <uses-permission android:name="android.permission.SET_DEBUG_APP" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -110,12 +111,20 @@
             android:label="@string/title_activity_frm_provider_bao_hong" >
         </activity>
         <activity
-        android:name=".activities.Profile1"
-        android:label="@string/title_profile1" >
-    </activity>
+            android:name=".activities.Profile1"
+            android:label="@string/title_profile1" >
+        </activity>
         <activity
             android:name=".fragments.TabHostHoatDong"
             android:label="@string/title_profile1" >
+        </activity>
+        <activity
+            android:name=".activities.Search"
+            android:label="@string/title_activity_search" >
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable">
+            </meta-data>
         </activity>
     </application>
 
