--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -108,7 +108,8 @@
         </activity>
         <activity
             android:name=".activities.Profile"
-            android:label="@string/title_activity_profile" />
+            android:label="@string/title_activity_profile"
+            android:windowSoftInputMode="adjustPan"/>
         <activity
             android:name=".activities.frmGhiChu"
             android:label="@string/title_activity_frm_ghi_chu" >
@@ -131,7 +132,8 @@
         </activity>
         <activity
             android:name=".activities.Profile1"
-            android:label="@string/title_profile1" >
+            android:label="@string/title_profile1"
+            android:windowSoftInputMode="adjustPan">
         </activity>
         <activity
             android:name=".fragments.TabHostHoatDong"
