--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -128,6 +128,7 @@
             android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".activities.frmGhiChu"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_frm_ghi_chu" >
         </activity>
         <activity
@@ -223,7 +224,12 @@
 
         <activity
             android:name=".activities.frmGhiChuKhac"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_frm_ghi_chu_khac" >
+        </activity>
+        <activity
+            android:name=".activities.DetailPickPost"
+            android:label="@string/title_activity_detail_pick_post" >
         </activity>
     </application>
 
