--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -128,8 +128,8 @@
             android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".activities.frmGhiChu"
-            android:screenOrientation="portrait"
-            android:label="@string/title_activity_frm_ghi_chu" >
+            android:label="@string/title_activity_frm_ghi_chu"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".activities.frmGhiChuPost"
@@ -224,12 +224,16 @@
 
         <activity
             android:name=".activities.frmGhiChuKhac"
-            android:screenOrientation="portrait"
-            android:label="@string/title_activity_frm_ghi_chu_khac" >
+            android:label="@string/title_activity_frm_ghi_chu_khac"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".activities.DetailPickPost"
             android:label="@string/title_activity_detail_pick_post" >
+        </activity>
+        <activity
+            android:name=".adapters.ListNotificationAdapter"
+            android:label="@string/title_activity_list_notification_adapter" >
         </activity>
     </application>
 
